Finalized CRUD+AI, Spring Security implemented, JWT stateless verification
Finalized the CRUD API for Flashcards, Notes, and Users

Added Spring Security and a JwtAuthenticationFilter layer that hides all protected endpoints besides /auth/register and /auth/login. Users must now login and provide a JWT in their headers (Authorization)